tests/exposure_test_ingress_from_entire_cluster_with_named_ports/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-based-on-named-ports
  namespace: hello-world
spec:
  podSelector: 
    matchLabels:
      app: a-app
  policyTypes:
  - Ingress
  ingress: 
    - from:
      - namespaceSelector: {}
      ports:
        - port: local-dns
        - port: http
